--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "maatwebsite/excel": "^1.1",
         "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
